--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ This guide walks you through the process of creating a Spring Boot application t
 
 == What you'll build
 
-You'll build a Spring application that persists geospacial data to MongoDB using GORM. 
+You'll build a Spring application that persists geospatial data to MongoDB using GORM. 
 
 NOTE: This guide only uses uses the Grails GORM library. You aren't required to use the full Grails web stack.
 
@@ -70,7 +70,7 @@ include::complete/src/main/groovy/cities/City.groovy[]
 
 The http://grails.org/doc/latest/guide/GORM.html#gormConstraints[constraint block] defines any validation rules. In this case, we ensure that the `name` cannot be blank and the `location` cannot be `null`.
 
-The http://springsource.github.io/grails-data-mapping/mongo/manual/guide/3.%20Mapping%20Domain%20Classes%20to%20Mongo%20Collections.html#3.2%20Indexing%20Queries[mapping block] specifies that the `location` property should be indexed using a http://docs.mongodb.org/manual/core/2dsphere/[geospacial 2sphere] index.
+The http://springsource.github.io/grails-data-mapping/mongo/manual/guide/3.%20Mapping%20Domain%20Classes%20to%20Mongo%20Collections.html#3.2%20Indexing%20Queries[mapping block] specifies that the `location` property should be indexed using a http://docs.mongodb.org/manual/core/2dsphere/[geospatial 2dsphere] index.
 
 The `location` property is a `grails.mongodb.geo.Point` that gets persisted to MongoDB as a http://geojson.org/geojson-spec.html#id2[GeoJSON Point].
 
